--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
+
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +37,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.bg{
+  background-size:cover ;
+  background-image: url(../src/Static/igor-omilaev-kmJ8x-KNtyo-unsplash.jpg);
+  height: 300px;
+  width: 200px;
 }
